--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "ethers": "^5.4.7",
+    "process": "^0.11.10",
+    "util": "^0.12.4",
     "vue": "^3.2.16",
-    "vue-dapp": "^0.4.2",
+    "vue-dapp": "^0.4.4",
     "vue-router": "4"
   },
   "devDependencies": {
