--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "process": "^0.11.10",
     "util": "^0.12.4",
     "vue": "^3.2.16",
-    "vue-dapp": "^0.4.4",
+    "vue-dapp": "^0.4.5",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^4.0.3",
     "@vitejs/plugin-vue": "^1.9.2",
     "typescript": "^4.4.3",
     "vite": "^2.6.0",
