--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "ethers": "^5.5.2",
-    "process": "^0.11.10",
-    "util": "^0.12.4",
-    "vue": "^3.2.25",
-    "vue-dapp": "^0.5.2",
+    "ethers": "^5.7.2",
+    "node-stdlib-browser": "^1.2.0",
+    "vue": "^3.2.45",
+    "vue-dapp": "^0.6.2",
     "vue-router": "4"
   },
   "devDependencies": {
-    "@rollup/plugin-inject": "^4.0.3",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.5.4",
-    "vite": "2.6.0",
-    "vite-plugin-windicss": "^1.4.8",
-    "windicss": "^3.1.8"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "rollup-plugin-polyfill-node": "^0.11.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
   }
 }
