--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "vue3-dapp-starter",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "ethers": "^5.7.2",
-    "node-stdlib-browser": "^1.2.0",
-    "vue": "^3.2.45",
-    "vue-dapp": "^0.6.2",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "rollup-plugin-polyfill-node": "^0.11.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4"
-  }
+	"name": "vue3-dapp-starter",
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview",
+		"lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+		"format": "prettier --ignore-path .gitignore --write \"**/*.+(html|vue|ts|js|json|cjs)\""
+	},
+	"dependencies": {
+		"ethers": "^5.7.2",
+		"node-stdlib-browser": "^1.2.0",
+		"vue": "^3.2.45",
+		"vue-dapp": "^0.6.2",
+		"vue-router": "4"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.44.0",
+		"@typescript-eslint/parser": "^5.44.0",
+		"@vitejs/plugin-vue": "^3.2.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-vue": "^9.8.0",
+		"postcss": "^8.4.19",
+		"prettier": "^2.8.0",
+		"rollup-plugin-polyfill-node": "^0.11.0",
+		"tailwindcss": "^3.2.4",
+		"typescript": "^4.9.3",
+		"unplugin-auto-import": "^0.11.5",
+		"unplugin-vue-components": "^0.22.11",
+		"vite": "^3.2.4"
+	}
 }
