--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,14 @@
 {
 	"version": 2,
 	"builds": [
+		{ "src": "package.json", "use": "@vercel/node" },
+		{ "src": "nuxt.config.js", "use": "@nuxtjs/vercel-builder", "config": { "serverFiles": ["package.json"] } }
+	],
+	"routes": [
 		{
-			"src": "package.json",
-			"use": "@vercel/node"
-		},
-		{
-			"src": "nuxt.config.js",
-			"use": "@nuxtjs/vercel-builder",
-			"config": {
-				"serverFiles": ["server-middleware/**"]
-			}
+			"src": "/sw.js",
+			"continue": true,
+			"headers": { "Cache-Control": "public, max-age=0, must-revalidate", "Service-Worker-Allowed": "/" }
 		}
 	]
 }
