--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "nuxt",
 		"build": "nuxt build",
-		"preview": "nuxt preview",
+		"dev": "nuxt dev",
 		"generate": "nuxt generate",
-		"vercel-build": "yarn global add node-gyp-build"
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
-		"@nuxtjs/vercel-builder": "^0.24.0",
 		"node-stdlib-browser": "^1.2.0",
 		"nuxt": "3.0.0",
 		"rollup-plugin-polyfill-node": "^0.11.0"
