--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"scripts": {
 		"build": " NITRO_PRESET=vercel-edge mkdir ./node_modules/unenv/runtime/node/events/index && cp  ./node_modules/unenv/runtime/node/events/index.cjs ./node_modules/unenv/runtime/node/events/index/.cjs && nuxt build",
 		"dev": "nuxt dev",
-		"start": "nuxi preview"
+		"start": "nuxi preview",
+		"generate": "nuxi generate"
 	},
 	"devDependencies": {
 		"node-stdlib-browser": "^1.2.0",
