--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"vue-router": "4"
 	},
 	"devDependencies": {
+		"@rollup/plugin-inject": "^5.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.44.0",
 		"@typescript-eslint/parser": "^5.44.0",
 		"@vitejs/plugin-vue": "^3.2.0",
@@ -25,7 +26,6 @@
 		"eslint-plugin-vue": "^9.8.0",
 		"postcss": "^8.4.19",
 		"prettier": "^2.8.0",
-		"rollup-plugin-polyfill-node": "^0.11.0",
 		"tailwindcss": "^3.2.4",
 		"typescript": "^4.9.3",
 		"unplugin-auto-import": "^0.11.5",
