--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "rollup-plugin-polyfill-node": "^0.11.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
