--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 		"@coinbase/wallet-sdk": "3.1.0",
 		"@gnosis.pm/safe-apps-provider": "^0.15.1",
 		"@gnosis.pm/safe-apps-sdk": "^7.8.0",
-		"@walletconnect/web3-provider": "^1.8.0",
-		"ethers": "^5.7.2",
+		"@walletconnect/ethereum-provider": "2.7.7",
+		"@walletconnect/modal": "^2.4.6",
+		"@web3modal/standalone": "^2.4.3",
+		"ethers": "5.7.2",
 		"node-stdlib-browser": "^1.2.0",
-		"vue": "^3.2.45",
-		"vue-dapp": "^0.7.1",
+		"vue": "^3.3.4",
+		"vue-dapp": "0.9.2-beta.0",
 		"vue-router": "4"
 	},
 	"devDependencies": {
@@ -23,7 +25,7 @@
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.19",
 		"tailwindcss": "^3.2.4",
-		"typescript": "^4.9.3",
+		"typescript": "^5.1.3",
 		"vite": "3.2.4"
 	}
 }
