--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 		"@walletconnect/ethereum-provider": "2.7.7",
 		"@walletconnect/modal": "^2.4.6",
 		"@web3modal/standalone": "^2.4.3",
-		"ethers": "5.7.2",
+		"ethers": "^6.6.3",
 		"node-stdlib-browser": "^1.2.0",
 		"vue": "^3.3.4",
-		"vue-dapp": "0.9.2-beta.0",
+		"vue-dapp": "^0.10.0",
 		"vue-router": "4"
 	},
 	"devDependencies": {
