--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"serve": "vite preview"
 	},
 	"dependencies": {
+		"@bitget-wallet/web3-sdk": "^0.0.8",
 		"@coinbase/wallet-sdk": "3.1.0",
 		"@gnosis.pm/safe-apps-provider": "^0.15.1",
 		"@gnosis.pm/safe-apps-sdk": "^7.8.0",
@@ -16,7 +17,7 @@
 		"ethers": "5.7.2",
 		"node-stdlib-browser": "^1.2.0",
 		"vue": "^3.3.4",
-		"vue-dapp": "^0.11.0",
+		"vue-dapp": "0.12.0-beta.7",
 		"vue-router": "4"
 	},
 	"devDependencies": {
