--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"serve": "vite preview"
 	},
 	"dependencies": {
-		"@vue-dapp/core": "^1.0.0-alpha.5",
+		"@vue-dapp/core": "1.0.0-alpha.8",
 		"@vue-dapp/vd-board": "^1.0.0-alpha.4",
 		"ethers": "^6.8.1",
 		"node-stdlib-browser": "^1.2.0",
