--- a/package.json
+++ b/package.json
@@ -1,27 +1,43 @@
 {
-	"name": "vue3-dapp-starter",
-	"version": "0.0.0",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"serve": "vite preview"
-	},
-	"dependencies": {
-		"@vue-dapp/core": "1.0.0-alpha.8",
-		"@vue-dapp/vd-board": "1.0.0-alpha.5",
-		"ethers": "^6.8.1",
-		"node-stdlib-browser": "^1.2.0",
-		"pinia": "^2.1.7",
-		"vue": "^3.3.4",
-		"vue-router": "4"
-	},
-	"devDependencies": {
-		"@rollup/plugin-inject": "^5.0.2",
-		"@vitejs/plugin-vue": "3.2.0",
-		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.19",
-		"tailwindcss": "^3.2.4",
-		"typescript": "^5.1.3",
-		"vite": "3.2.4"
-	}
+  "name": "vue",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
+  },
+  "dependencies": {
+    "@vue-dapp/core": "1.0.0-beta.6",
+    "@vue-dapp/walletconnect": "1.0.0-beta.2",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^18.19.3",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.3",
+    "@vue/tsconfig": "^0.5.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^23.0.1",
+    "npm-run-all2": "^6.1.1",
+    "prettier": "^3.0.3",
+    "typescript": "~5.3.0",
+    "vite": "^5.0.10",
+    "vitest": "^1.0.4",
+    "vue-tsc": "^1.8.25"
+  }
 }
