Add vue-dapp beta.6

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue-dapp/core": "1.0.0-beta.6",
+    "@vue-dapp/walletconnect": "1.0.0-beta.7",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11"
   },
   "devDependencies": {
