--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@vue-dapp/core": "1.0.0-beta.17",
-    "@vue-dapp/walletconnect": "1.0.0-beta.17",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.15"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vue-tsc": "^1.8.27"
-  }
+	"name": "vite-project",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@vue-dapp/core": "latest",
+		"@vue-dapp/walletconnect": "latest",
+		"pinia": "^2.1.7",
+		"vue": "^3.4.15"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.0.3",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.12",
+		"vue-tsc": "^1.8.27"
+	}
 }
