--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"clean": "rm -rf dist && rm -rf node_modules"
 	},
 	"dependencies": {
 		"@vue-dapp/coinbase": "1.5.1",
 		"@vue-dapp/core": "1.5.1",
 		"@vue-dapp/modal": "1.5.1",
-		"pinia": "^2.1.7",
-		"vue": "^3.4.15"
+		"pinia": "^2.2.8",
+		"vue": "^3.5.13"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^5.0.3",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.12",
-		"vue-tsc": "^1.8.27"
-	}
+		"@vitejs/plugin-vue": "^5.2.1",
+		"typescript": "^5.7.2",
+		"vite": "^6.0.2",
+		"vue-tsc": "^2.1.10"
+	},
+	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
